add colored container as content placeholder

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ body{
     background-color: var(--ev-bg-primary);
     overflow-y: auto;
     flex-direction: column;
+    row-gap: 1rem;
 
     .intestation{
         background-color: goldenrod;
