--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,9 @@ body{
         .navbar-brand{
             color: var(--ev-lightest);
             font-size: 2.5rem;
+            align-items: center;
+            flex-wrap: wrap;
+
         }
     }
 
@@ -82,18 +85,22 @@ body{
 #site_main{
     width: 100%;
     background-color: var(--ev-bg-primary);
-    overflow-y: auto;
     flex-direction: column;
     row-gap: 1rem;
+    overflow-y: auto;
+    max-height: calc(100vh - 50px);
 
     .intestation{
-        background-color: goldenrod;
-        text-align: center;
+        background-color: var(--ev-h-primary);
     }
 
     .container_text{
-        background-color: aquamarine;
-        height: 150px;
+        color: var(--ev-lightest);
+        
+        .welcome{
+            font-size: 1.1rem;
+            line-height: 2.5rem;
+        }
     }
 }
 /* #endregion main */
