--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 body{
     overflow-y: hidden;
     font-family: "Nanum Gothic", sans-serif;
+    p{
+        font-size: 1.1rem;
+        line-height: 2rem;
+    }
 }
 /* #endregion common */
 
@@ -101,8 +105,7 @@ body{
         color: var(--ev-lightest);
         
         .welcome{
-            font-size: 1.1rem;
-            line-height: 2rem;
+            
         }
     }
 }
