edit list container justify

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,12 @@ body{
             line-height: 2rem;
         }
 
+        .list_container{
+            gap: 10rem;
+        }
+
+
+
     }
 
     .accordion-button{
